--- a/tools/kconfig/config.8
+++ b/tools/kconfig/config.8
@@ -35,34 +35,22 @@
 .Dt CONFIG 8
 .Os BSD 4
 .Sh NAME
-.Nm config
+.Nm kconfig
 .Nd build system configuration files
 .Sh SYNOPSIS
-.Nm config
+.Nm kconfig
 .Op Fl p
 .Ar system_name
 .Sh DESCRIPTION
 .Pp
-This is the old version of the
-.Nm config
-program.
-It understands the old autoconfiguration scheme
-used on the HP300, DECstation, and derivative platforms.
-The new version of config is used with the
-SPARC and i386 platforms.
-Only the version of 
-.Nm config
-applicable to the architecture that you are running
-will be installed on your machine.
-.Pp
-.Nm Config
+.Nm Kconfig
 builds a set of system configuration files from the file
 .Ar SYSTEM_NAME
 which describes
 the system to configure.
 A second file
 tells
-.Nm config
+.Nm kconfig
 what files are needed to generate a system and
 can be augmented by configuration specific set of files
 that give alternate files for a specific machine.
@@ -76,8 +64,8 @@ Available option and operand:
 .It Fl p
 If the
 .Fl p
-option is supplied, 
-.Nm config
+option is supplied,
+.Nm kconfig
 will configure a system for profiling; for example,
 .Xr kgmon 8
 and
@@ -96,19 +84,15 @@ subdirectory of the system source (usually
 .Nm Config
 assumes the directory
 .Pa ../SYSTEM_NAME
-exists and places all output files there.  
+exists and places all output files there.
 The output of
-.Nm config
+.Nm kconfig
 consists of a number of files; for the
 .Tn VAX ,
 they are:
 .Pa ioconf.c ,
 a description
 of what I/O devices are attached to the system;
-.Pa ubglue.s ,
-a set of interrupt service routines for devices
-attached to the
-.Tn UNIBUS ;
 .Pa ubvec.s ,
 offsets into a structure used for counting per-device interrupts;
 .Pa Makefile ,
@@ -124,7 +108,7 @@ the disk areas to be used for swapping, the root file system,
 argument processing, and system dumps.
 .Pp
 After running
-.Nm config ,
+.Nm kconfig ,
 it is necessary to run
 .Dq Li make depend
 in the directory where the new makefile
@@ -133,24 +117,24 @@ was created.
 prints a reminder of this when it completes.
 .Pp
 If any other error messages are produced by
-.Nm config ,
+.Nm kconfig ,
 the problems in the configuration file should be corrected and
-.Nm config
+.Nm kconfig
 should be run again.
 Attempts to compile a system that had configuration errors
 are likely to fail.
 .Sh FILES
-.Bl -tag -width /sys/conf/Makefile.vax -compact
-.It Pa /sys/conf/Makefile.vax
+.Bl -tag -width /sys/conf/Makefile.pic32 -compact
+.It Pa /sys/conf/Makefile.pic32
 generic makefile for the
 .Tn VAX
 .It Pa /sys/conf/files
 list of common files system is built from
-.It Pa /sys/conf/files.vax
+.It Pa /sys/conf/files.pic32
 list of
 .Tn VAX
 specific files
-.It Pa /sys/conf/devices.vax
+.It Pa /sys/conf/devices.pic32
 name to major device mapping file for the
 .Tn VAX
 .It Pa /sys/conf/files. Ns Em ERNIE
@@ -161,10 +145,8 @@ system
 .Sh SEE ALSO
 The SYNOPSIS portion of each device in section 4.
 .Rs
-.%T "Building 4.3 BSD UNIX System with Config"
+.%T "Building RetroBSD Kernel with kconfig"
 .Re
-.sp
-.Xr config.new 8
 .Sh BUGS
 The line numbers reported in error messages are usually off by one.
 .Sh HISTORY
