Kconfig: rename machine to architecture, ident to board. Make timezone and maxusers parameters optional.
Enable kernel options UCB_METER, EXEC_AOUT, EXEC_ELF and EXEC_SCRIPT
by default.

--- a/tools/kconfig/kconfig.8
+++ b/tools/kconfig/kconfig.8
@@ -18,7 +18,7 @@ A second file tells
 .Nm kconfig
 what files are needed to generate a kernel and
 can be augmented by configuration specific set of files
-that give alternate files for a specific machine.
+that give alternate files for a specific architecture.
 (see the
 .Sx FILES
 section below)
@@ -39,7 +39,7 @@ and other system parameters for one kernel configuration.
 .El
 .Pp
 .Nm Kconfig
-should be run from the machine and board specific
+should be run from the architecture and board specific
 subdirectory of the system source (like
 .Pa sys/pic32/max32 ) .
 .Nm Kconfig
