--- a/src/cmd/stty/stty.1
+++ b/src/cmd/stty/stty.1
@@ -59,32 +59,32 @@ first rows and then columns.
 .PP
 \fIOperands\fP are selected from the following:
 .TP  10
-.B even 
+.B even
 allow even parity input
 .br
 .ns
 .TP 10
-.B \-even 
+.B \-even
 disallow even parity input
 .TP 10
-.B odd 
+.B odd
 allow odd parity input
 .br
 .ns
 .TP 10
-.B \-odd 
+.B \-odd
 disallow odd parity input
 .TP 10
-.B raw 
+.B raw
 raw mode input
 (\fBno\fR input processing (erase, kill, interrupt, ...); parity bit passed back)
 .br
 .ns
 .TP 10
-.B \-raw 
+.B \-raw
 negate raw mode
 .TP 10
-.B cooked 
+.B cooked
 same as `\-raw'
 .TP 10
 .B cbreak
@@ -96,29 +96,29 @@ but all other processing (interrupt, suspend, ...) is performed
 .ns
 .TP 10
 .B \-cbreak
-make characters available to 
+make characters available to
 .I read
 only when newline is received
 .TP 10
-.B \-nl 
+.B \-nl
 allow carriage return for new-line,
 and output CR-LF for carriage return or new-line
 .br
 .ns
 .TP 10
-.B nl 
+.B nl
 accept only new-line to end lines
 .TP 10
-.B echo 
+.B echo
 echo back every character typed
 .br
 .ns
 .TP 10
-.B \-echo 
+.B \-echo
 do not echo characters
 .TP 10
 .B tandem
-enable inbound software (xon/xoff) flow control, so that the system sends 
+enable inbound software (xon/xoff) flow control, so that the system sends
 out the stop character when
 its internal queue is in danger of overflowing on input, and sends the
 start character when it is ready to accept further input
@@ -128,12 +128,12 @@ start character when it is ready to accept further input
 .B \-tandem
 disable inbound software (xon/xoff) flow control
 .TP 10
-.B \-tabs 
+.B \-tabs
 replace tabs by spaces when printing
 .br
 .ns
 .TP 10
-.B tabs 
+.B tabs
 preserve tabs
 .br
 .PP
@@ -201,11 +201,10 @@ This character is an additional character causing wakeup.
 .TP 10
 .B dec
 set all modes suitable for Digital Equipment Corp. operating systems
-users; (erase, kill, and interrupt characters to ^?, ^U, and ^C,
-decctlq and ``newcrt''.)
+users; (erase, kill, and interrupt characters to ^?, ^U, and ^C, and ``crt''.)
 .ns
 .TP 10
-.B 0 
+.B 0
 hang up phone line immediately
 .br
 .ns
@@ -234,11 +233,6 @@ A teletype driver which supports the job control processing of
 and more functionality than the basic driver is fully described in
 .IR tty (4).
 The following options apply only to it.
-.TP 10
-.B new
-Use new driver (switching flushes typeahead).
-.br
-.ns
 .TP 10
 .B crt
 Set options for a CRT (crtbs, ctlecho and, if >= 1200 baud,
@@ -276,18 +270,6 @@ Print two backspaces following the EOT character (control D).
 Control characters echo as themselves; in cooked mode EOT (control-D)
 is not echoed.
 .TP 10
-.B decctlq
-After output is suspended (normally by ^S), only a start character
-(normally ^Q) will restart it.  This is compatible with DEC's vendor
-supplied systems.
-.br
-.ns
-.TP 10
-.B \-decctlq
-After output is suspended, any character typed will restart it;
-the start character will restart output without providing any input.
-(This is the default.)
-.TP 10
 .B tostop
 Background jobs stop if they attempt terminal output.
 .br
@@ -305,7 +287,7 @@ Output is being discarded usually because user hit control O (internal state bit
 Output is not being discarded.
 .TP 10
 .B pendin
-Input is pending after a switch from cbreak to cooked 
+Input is pending after a switch from cbreak to cooked
 and will be re-input when a read becomes pending or more input arrives
 (internal state bit).
 .br
@@ -346,9 +328,7 @@ Don't send hangup signal if carrier drops.
 .B \-nohang
 Send hangup signal to control process group when carrier drops.
 .PP
-The following special characters are applicable only to the new
-teletype driver
-and are not normally changed.
+The following special characters are not normally changed.
 .TP 10
 .BI susp \ c\fR
 set suspend process character to \fIc\fR (default control Z).
