--- a/src/cmd/sl/sl.1
+++ b/src/cmd/sl/sl.1
@@ -1,34 +1,36 @@
 .\"
-.\"  Copyright 1993 Toyoda Masashi.
-.\"		(toyoda@is.titech.ac.jp)
-.\"	@(#)sl.1	2.02  19/01/93
+.\"  Copyright 1993,1998,2014 Toyoda Masashi (mtoyoda@acm.org)
 .\"
-.TH SL 1 "Jan 19, 1993"
-.SH 名称
-sl \- キータイプを矯正します。
-.SH 形式
+.\"	@(#)sl.1
+.\"
+.TH SL 1 "March 31, 2014"
+.SH NAME
+sl \- cure your bad habit of mistyping
+.SH SYNOPSIS
 .B sl
 [
-.B \-alF
+.B \-alFc
 ]
-.SH 解説
+.SH DESCRIPTION
 .B sl
-は、高度に発展した、キータイプ矯正を目的とするアニメーションプログラムです。
+is a highly advanced animation program for curing your bad habit of mistyping.
 .PP
-次のようなオプションがあります。
 .TP
 .B \-a
-なにかアクシデントがあったようですね。助けを求める人々が悲痛です。
+An accident is occurring. People cry for help.
 .TP
 .B \-l
-小さくなります。
+Little version
 .TP
 .B \-F
-飛びます。
+It flies like the galaxy express 999.
+.TP
+.B \-c
+C51 appears instead of D51.
 .PP
-.SH 関連事項
+.SH SEE ALSO
 .BR ls (1)
-.SH バグ
-カレントディレクトリの内容が表示されることがあります。
-.SH 著者
-豊田 正史（toyoda@isea.is.titech.ac.jp）
+.SH BUGS
+It sometimes lists directory contents.
+.SH AUTHOR
+Toyoda Masashi (mtoyoda@acm.org)
