Add kernel configuration for SnadPIC MX795 board. For board documentation, see: http://www.microcontroller-board.com/snadpic-board-32/11-snadpic-pic32mx795f512l-development-board.html

--- a/sys/pic32/README
+++ b/sys/pic32/README
@@ -30,6 +30,8 @@ Build directories:
 
     sdxl/               - Majenko SDXL board.
 
+    snadpic/            - SnadPIC MX795 board.
+
     starter-kit/        - Microchip PIC32MX USB or Ethernet Starter Kit,
                           with I/O Expansion board and SD & MMC pictail.
 
